<resources>
    <string name="app_name">Meeting</string>
    <string name="bugly_app_id"></string>
    <string name="title_home">Главная</string>
    <string name="title_rooms">Комнаты</string>
    <string name="title_me">Я</string>
    <string name="permission_not_granted">Требуемые разрешения не предоставлены</string>
    <string name="home_category_title_multi">Совещание</string>
    <string name="home_category_title_single">Трансляция</string>
    <string name="home_category_title_pk">Поединок</string>
    <string name="home_category_title_virtual_host">Под маской</string>
    <string name="home_category_title_ecommerce">Шоппинг</string>
    <string name="home_category_desp_multi">Пригласите участников для обсуждения</string>
    <string name="home_category_desp_single">Трансляции для Ваших подписчиков</string>
    <string name="home_category_desp_pk">Парные трансляции участников</string>
    <string name="home_category_desp_virtual_host">Совещание или трансляции в режиме маски</string>
    <string name="home_category_desp_ecommerce">Продажи продуктов в онлайн</string>
    <string name="room_list_no_data_hint">Создайте комнату</string>
    <string name="room_list_fail_to_obtain_data_hint">Ошибка загрузки данных, попробуйте позже</string>
    <string name="room_list_network_error_title">Ошибка сети</string>
    <string name="room_list_network_error_message">Соединение по сети недоступно, попробуйте позже.</string>
    <string name="profile_item_title_avatar">Учётная запись</string>
    <string name="profile_item_title_nickname">Имя</string>
    <string name="modify_user_title">Изменить имя</string>
    <string name="about_title">О программе</string>
    <string name="privacy_policy_title">Политика конфиденциальности</string>
    <string name="privacy_website_link">https://www.yandex.ru/</string>
    <string name="disclaimer_title">Краткое описание продукта</string>
    <string name="disclaimer_content">Meeting является ПО, разработанным по заказу [Ваши имена]. Уважаемые пользователи, соблюдайте права пользования данным продуктом.</string>
    <string name="sign_up_agora_title">Регистрация</string>
    <string name="sign_up_website_link">https://yandex.ru</string>
    <string name="version_title">Версии</string>
    <string name="agoralive_version_title">Версия ПО Meeting</string>
    <string name="agoralive_release_time_title">Релиз</string>
    <string name="agoralive_release_time" translatable="false">октябрь 2020</string>
    <string name="agoralive_media_sdk_version_title">Версия SDK</string>
    <string name="agoralive_media_sdk_version">3.0.1.1</string>
    <string name="live_prepare_hint">Название канала</string>
    <string name="go_live_text">Вещание</string>
    <string name="live_prepare_name_too_long_toast_format">Название комнаты не может быть длиннее %d символов</string>
    <string name="live_prepare_no_room_name">Введите название комнаты</string>
    <string name="no_fu_auth_notice">Не пройдена проверка FaceUnity</string>
    <string name="live_bottom_edit_hint">Скажите что-нибудь &#8230;</string>
    <string name="live_send_empty_message">Пустые сообщения не отправляются</string>
    <string name="live_host_in_room_name_hint">Канал&#160;&#160;</string>
    <string name="live_host_in_seat_state_open_audience">Стать ведущим</string>
    <string name="live_host_in_seat_state_open_host">Пригласить гостя</string>
    <string name="live_host_in_seat_state_blocked">Заблокировано</string>
    <string name="live_system_notification_member_joined">приглашён</string>
    <string name="live_system_notification_member_left">покинул</string>
    <string-array name="live_host_in_seat_operations">
        <item>Без звука</item>
        <item>Со звуком</item>
        <item>Покинуть</item>
        <item>Открыть</item>
        <item>Закрыть</item>
    </string-array>
    <string name="live_virtual_image_select_title">Выбрать изображение</string>
    <string name="live_virtual_image_select_confirm">Подтвердить</string>
    <string name="live_virtual_image_invite">Пригласить</string>
    <string name="live_virtual_image_stop_invite">Покинуть</string>
    <string name="live_virtual_image_stop_invite_message">Вы действительно хотите покинуть чат?</string>
    <string name="live_pk_host_remaining_time_hint">PK покинул:</string>
    <string name="product_detail_buy_now">Купить</string>
    <string name="product_promote_title">抢 9 期免息券</string>
    <string name="product_promote_date">6.11 - 6.18</string>
    <string name="product_promote_actual_price_title">到手价</string>
    <string name="product_promote_actual_price">6599</string>
    <string name="product_default_description">Apple iPad Pro 11英寸平板电脑 2020年新款(256G WLAN版/全面屏/A12Z/FaceID/MXDC2CH/A) 深空灰色</string>
    <string name="product_name_1">Lipstick</string>
    <string name="product_name_2">Rucksack</string>
    <string name="product_name_3">iPad</string>
    <string name="product_name_4">Pants</string>
    <string name="product_desp_1">Revlon Super Lustrous Lipstick, High Impact Lipcolor</string>
    <string name="product_desp_2">Keepall 55 Monogram Eclipse Canvas M40605</string>
    <string name="product_desp_3">New Apple iPad Pro (12.9-inch, Wi-Fi, 128GB) - Silver </string>
    <string name="product_desp_4">Men\'s K87 Workwear Pocket Short Sleeve T-Shirt </string>
    <string name="live_message_gift_send">разослано</string>
    <string name="live_room_setting_action_sheet_title">Настройки</string>
    <string name="live_room_setting_title_resolution">Разрешение</string>
    <string name="live_room_setting_title_framerate">Частота кадров</string>
    <string name="live_room_setting_title_bitrate">Битрейт</string>
    <string name="live_room_setting_bitrate_value_format" translatable="false">%d кБ/с</string>
    <string name="live_room_setting_bitrate_value_default">По умолчанию</string>
    <string name="live_room_beauty_action_sheet_title">Эффекты</string>
    <string name="live_room_beauty_action_sheet_blur">Фильтр синего</string>
    <string name="live_room_beauty_action_sheet_color">Яркость</string>
    <string name="live_room_beauty_action_sheet_cheek_thinning">Контраст</string>
    <string name="live_room_beauty_action_sheet_eye_enlarge">Фильтр красного</string>
    <string name="live_room_bg_music_action_sheet_title">Публикация ссылки на трансляцию</string>
    <string name="live_room_bg_music_action_sheet_credit_hint">Важно:&#160;&#160;</string>
    <string name="live_room_bg_music_action_sheet_credit_link">Вы должны быть авторизованы в соцсети!</string>
    <string name="live_room_gift_action_sheet_title">Подарки</string>
    <string name="live_room_gift_action_sheet_send">Отправить</string>
    <string name="live_room_gift_action_sheet_value_format">(%d монет)</string>
    <string name="live_room_pk_room_list_title_format">Список комнат (%d)</string>
    <string-array name="gift_names">
        <item>Колокольчик</item>
        <item>Мороженное</item>
        <item>Вино</item>
        <item>Пироженное</item>
        <item>Кольцо</item>
        <item>Часы</item>
        <item>Алмаз</item>
        <item>Рокета</item>
    </string-array>
    <string name="live_room_gift_channel_message">послал %s подарок</string>
    <string name="live_room_tool_action_sheet_title">Инструменты</string>
    <string-array name="live_room_action_sheet_tool_names">
        <item>Данные</item>
        <item>Микрофон</item>
        <item>Гарнитура</item>
        <item>Настройки</item>
        <item>Поворот</item>
        <item>Камера</item>
    </string-array>
    <string name="live_room_tool_action_sheet_title_setting">Настройки</string>
    <string name="live_room_tool_action_sheet_title_data">Данные</string>
    <string name="live_room_tool_action_sheet_title_beauty">Эффекты</string>
    <string name="live_room_tool_action_sheet_title_music">Музыка</string>
    <string name="live_room_tool_action_sheet_title_rotate">Поворот</string>
    <string name="live_room_tool_action_sheet_title_camera">Камера</string>
    <string name="live_room_tool_action_sheet_title_speaker">Микрофон</string>
    <string name="live_room_tool_action_sheet_title_inear">Гарнитура</string>
    <string name="live_room_tool_action_sheet_title_apply">Применить</string>
    <string name="live_room_voice_action_sheet_title">Голос</string>
    <string name="live_room_voice_action_sheet_headphone">Наушники</string>
    <string name="live_room_voice_action_sheet_loudspeaker">Громкая связь</string>
    <string name="live_room_voice_action_sheet_others">Прочее</string>
    <string name="live_room_host_in_invite_user_list_action_sheet_title">Пригласить</string>
    <string name="live_room_all_online_user_action_sheet_title">Приглашённые участники</string>
    <string name="live_room_host_in_audience_apply_title">Применить</string>
    <string name="live_room_host_in_audience_apply_message">Вы хотите сделать ведущим?</string>
    <string name="live_room_host_in_audience_apply_owner_message">"%s" хочет назначить Вас %d, согласны？</string>
    <string name="live_room_host_in_audience_apply_owner_message_simple">"%s" хочет стать ведущим, согласны？</string>
    <string name="live_room_host_in_invited_by_owner">"%s" приглашает стать Вас %d，согласны？</string>
    <string name="live_room_host_in_invited_by_owner_simple">"%s" приглашает Вас стать ведущим， согласны？</string>
    <string name="live_room_host_in_invite_rejected">Приглашение отклонено</string>
    <string name="live_room_host_in_invite_rejected_message">Ваше приглашение отклонено\n "%s"</string>
    <string name="live_room_host_in_apply_rejected">Отклонено</string>
    <string name="live_room_host_in_apply_rejected_message">Ваше предложение отклонено\n "%s"</string>
    <string name="live_room_pk_room_list_button_text">Вызвать на поединок</string>
    <string name="live_room_pk_room_receive_pk_request_title">Вызов принят</string>
    <string name="live_room_pk_room_receive_pk_request_message">%s приглашает Вас в комнату,\n согласны?</string>
    <string name="live_room_virtual_image_invited_message">"%s" приглашает Вас в чат, согласны？</string>
    <string name="live_room_product_list_title">Список товаров</string>
    <string name="live_room_action_sheet_type_unlisted_title">Неактивно</string>
    <string name="live_room_action_sheet_type_listed_title">Активно</string>
    <string name="live_room_action_sheet_product_price_format">￥ %d</string>
    <string name="live_room_action_sheet_product_action_detail">Подробности</string>
    <string name="live_room_action_sheet_product_action_list">Запуск</string>
    <string name="live_room_action_sheet_product_action_unlisted">Удаление</string>
    <string name="live_room_online_user_invite_call_btn">Пригласить</string>
    <string name="live_room_online_user_invited_btn">Приглашаю</string>
    <string name="live_room_online_user_call_agree">Согласен</string>
    <string name="live_room_online_user_call_reject">Отклонить</string>
    <string name="live_room_online_user_tab_all">Все пользователи</string>
    <string name="live_room_online_user_tab_application">Приложения</string>
    <string name="dialog_negative_button">Отмена</string>
    <string name="dialog_positive_button">Подтвердить</string>
    <string name="dialog_positive_button_accept">Принять</string>
    <string name="dialog_negative_button_refuse">Отклонить</string>
    <string name="end_live_streaming_title_owner">Завершить трансляцию</string>
    <string name="end_live_streaming_message_owner">Вы действительно хотите завершить трансляцию?</string>
    <string name="finish_broadcast_title_audience">Покинуть комнату</string>
    <string name="finish_broadcast_message_audience">Вы действительно хотите покинуть комнату?</string>
    <string name="dialog_multi_host_open_seat_title">Переоткрыть</string>
    <string name="dialog_multi_host_open_seat_message">Вы повторно хотите открыть это место?</string>
    <string name="dialog_multi_host_block_seat_title">Block</string>
</resources>